[package]
name = "ed25519-test-generator"
version = "0.1.0"
edition = "2021"
description = "Test generator for the ED25519 elliptic curve"
authors = ["Your Name <your.email@example.com>"]

[workspace]

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-ed25519 = "0.5.0"
ark-serialize = "0.5.0"
cainome = { version = "0.5.0", features = ["abigen-rs"] }
cainome-cairo-serde = "0.1.0"
cainome-cairo-serde-derive = "0.1.0"
clap = { version = "4.3.10", features = ["derive"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
starknet = "0.13.0"
